--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,12 @@ workflows:
             branches:
               only:
                 - master
+      - build-bitops-branch-demo:
+          context: bitops
+          filters:
+            branches:
+              only:
+                - bitops-branch-demo
 jobs:
   build:
     machine:
@@ -46,6 +52,47 @@ jobs:
 
             # publish setup
             export BITOPS_DOCKER_IMAGE_PUBLISH_TAG="latest-refactor" # use a different
+            export BITOPS_DOCKER_IMAGE_PUBLISH_SKIP_SHA="1"
+            export BITOPS_DOCKER_IMAGE_NAME="${CIRCLE_PROJECT_REPONAME}"
+            export BITOPS_GIT_TAG="${CIRCLE_TAG}"
+            export BITOPS_GIT_SHA="${CIRCLE_SHA1}"
+            export BITOPS_GIT_BRANCH="${CIRCLE_BRANCH}"
+            export BITOPS_GIT_BASE_BRANCH="master"
+
+            ###
+            ### PUBLISH
+            ### 
+            ./scripts/ci/publish.sh
+
+
+  build-bitops-branch-demo:
+    machine:
+      image: ubuntu-1604:201903-01
+    steps:
+      - checkout
+      - run:
+          name: Install dependencies
+          command: |
+            ./scripts/ci/install.sh
+      - run:
+          name: Run tests
+          command: |
+            ./scripts/ci/test.sh
+      - deploy:
+          name: Publish docker image
+          command: |
+            ###
+            ### SETUP ENV VARS
+            ### 
+
+            # registry setup
+            export BITOPS_PUBLISH_ECR="1"
+            export REGISTRY_URL="832297766686.dkr.ecr.us-east-2.amazonaws.com/bitovi/bitops"
+            export AWS_ACCESS_KEY_ID="${BITOPS_AWS_ACCESS_KEY_ID}"
+            export AWS_SECRET_ACCESS_KEY="${BITOPS_AWS_SECRET_ACCESS_KEY}"
+
+            # publish setup
+            export BITOPS_DOCKER_IMAGE_PUBLISH_TAG="bitops-branch-demo"
             export BITOPS_DOCKER_IMAGE_PUBLISH_SKIP_SHA="1"
             export BITOPS_DOCKER_IMAGE_NAME="${CIRCLE_PROJECT_REPONAME}"
             export BITOPS_GIT_TAG="${CIRCLE_TAG}"
